Prevent More... menu from overlapping search box (#10546)

--- a/src/amo/components/Header/styles.scss
+++ b/src/amo/components/Header/styles.scss
@@ -249,7 +249,7 @@
 
   &.Header-search-form--desktop {
     @include respond-to(medium) {
-      max-width: 160px;
+      max-width: 140px;
     }
 
     @include respond-to(large) {
